# difftastic-mini

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: config.rs  diff.rs  main.rs  reader.rs  render.rs  types.rs
